crates/talkbank-derive/tests/ui/fail_error_code_enum_non_unit_variant.rs
use talkbank_derive::error_code_enum;

#[error_code_enum]
enum NonUnitVariant {
    #[code("E001")]
    SomeError,
    #[code("E002")]
    TupleVariant(String),
    #[code("E999")]
    UnknownError,
}

fn main() {}
